@@ -23,8 +23,6 @@ import java.text.MessageFormat;
 import java.util.Arrays;
 
 import com.sun.faces.config.ConfigurationException;
-import com.sun.faces.config.WebConfiguration;
-import com.sun.faces.config.WebConfiguration.WebContextInitParameter;
 import com.sun.faces.util.ReflectionUtils;
 import com.sun.faces.util.Util;
 
@@ -32,21 +30,20 @@ public class ReflectionUtil {
 
     private static final String[] PRIMITIVE_NAMES = new String[] { "boolean", "byte", "char", "double", "float", "int", "long", "short", "void" };
 
-    private static final Class[] PRIMITIVES = new Class[] { boolean.class, byte.class, char.class, double.class, float.class, int.class, long.class,
+    private static final Class<?>[] PRIMITIVES = new Class<?>[] { boolean.class, byte.class, char.class, double.class, float.class, int.class, long.class,
             short.class, Void.TYPE };
 
     /**
      *
      */
     private ReflectionUtil() {
-        super();
     }
 
     public static Class forName(String name) throws ClassNotFoundException {
         if (null == name || "".equals(name)) {
             return null;
         }
-        Class c = forNamePrimitive(name);
+        Class<?> c = forNamePrimitive(name);
         if (c == null) {
             if (name.endsWith("[]")) {
                 String nc = name.substring(0, name.length() - 2);
@@ -69,6 +66,11 @@ public class ReflectionUtil {
         return null;
     }
 
+    @SuppressWarnings("unchecked")
+    public static <T> T newInstance(String name) throws InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException, ClassNotFoundException {
+        return (T) forName(name).getDeclaredConstructor().newInstance();
+    }
+
     /**
      * Converts an array of Class names to Class types
      *
@@ -80,7 +82,7 @@ public class ReflectionUtil {
         if (s == null) {
             return null;
         }
-        Class[] c = new Class[s.length];
+        Class<?>[] c = new Class[s.length];
         for (int i = 0; i < s.length; i++) {
             c[i] = forName(s[i]);
         }
@@ -144,11 +146,11 @@ public class ReflectionUtil {
 //        return null;
 //    }
 
-    protected static final String paramString(Class[] types) {
+    protected static String paramString(Class<?>[] types) {
         if (types != null) {
-            StringBuffer sb = new StringBuffer();
-            for (int i = 0; i < types.length; i++) {
-                sb.append(types[i].getName()).append(", ");
+            StringBuilder sb = new StringBuilder();
+            for (Class<?> type : types) {
+                sb.append(type.getName()).append(", ");
             }
             if (sb.length() > 2) {
                 sb.setLength(sb.length() - 2);
@@ -172,9 +174,9 @@ public class ReflectionUtil {
                 }
             }
             if (clazz != null && returnObject == null) {
-                returnObject = clazz.newInstance();
+                returnObject = clazz.getDeclaredConstructor().newInstance();
             }
-        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
+        } catch (IllegalArgumentException | ReflectiveOperationException | SecurityException e) {
             throw new ConfigurationException(
                     buildMessage(MessageFormat.format("Unable to create a new instance of ''{0}'': {1}", clazz.getName(), e.toString())), e);
         }
@@ -227,8 +229,4 @@ public class ReflectionUtil {
 
     }
 
-    private static boolean isDevModeEnabled() {
-        WebConfiguration webconfig = WebConfiguration.getInstance();
-        return webconfig != null && "Development".equals(webconfig.getOptionValue(WebContextInitParameter.JakartaFacesProjectStage));
-    }
 }
